# Jovibe-Agent

./: .gitignore  HEARTBEAT.md  README.md  TODO.md  capabilities.md  install_linux.sh  install_termux.sh  install_windows.ps1  list_models.py  memory.md  project_memory.md  pyproject.toml  requirements.txt  soul.md  test_genai.py  test_key.py  user.md  verify_key.py
.github/workflows/: ci.yml
src/: auth.py  heartbeat.py  llm.py  main.py
src/adapters/: base.py  telegram_adapter.py
src/config/: settings.py
src/memory/: db.py  manager.py
src/skills/: __init__.py  creator.py  default.py  registry.py  web_search.py
tests/: test_llm.py  test_memory.py  test_skills.py
